# start-project-c-plus-plus

./: CMakeLists.txt  README.md
include/: adaptee.hpp  adapter.hpp  target.hpp
src/: adaptee.cpp  adapter.cpp  main.cpp  target.cpp
