cmake_minimum_required(VERSION 3.0.0)
project(adapter-learning VERSION 0.1.0)

# CXX LANGUAGES
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# OUTPUT DIRS
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build")

# SETTING FOLDERS
set(SRC_CXX "src")

set(HEADER_CXX "include")

# AUTOMATIC LOADING CPP FILES
file(GLOB_RECURSE SOURCE_FILES
    ${SRC_CXX}/*.cpp
)

add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})

target_include_directories(${CMAKE_PROJECT_NAME}
PRIVATE
PUBLIC
# $<INSTALL_INTERFACE:include>
$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/${HEADER_CXX}>
# include
)

target_link_libraries(${CMAKE_PROJECT_NAME}
PUBLIC
PRIVATE
)


